syntax = "proto3";

package com.example.commons.protobuf.fraud;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

message FraudUserCreationRequest{
  string email = 1;
}

message FraudUserCreationResponse{
  uint32 id = 1;
  string email = 2;
  google.protobuf.Timestamp created_at = 3;
}

service FraudService{

  rpc addFraud(FraudUserCreationRequest) returns (FraudUserCreationResponse);

}